@@ -3,8 +3,6 @@
   <title>Nested Elements</title>
 </head>
 <body>
-  <h1>Nested Elements</h1>
-
   <div id="div_id">
     <a href="success.html">Success</a>
     <form method="get" action="success.html">
@@ -40,6 +38,7 @@
       <li>Item One</li>
       <li>Item Two</li>
     </ul>
+    <h1>h1's are cool</h1>
   </div>
 </body>
 </html>
