@@ -91,8 +91,10 @@
     <input id=confirm_button type=button onclick="this.value = confirm('set the value')" value=Confirm>
     <input id=prompt_button type=button onclick="this.value = prompt('enter your name','John Doe')" value=Prompt>
 
+    <h1 id="h1_id" class="h1_class" name="h1_name">h1's are cool</h1>
+    
     <h3>New Window</h3>
     <a href="success.html" target="_blank">New Window</a>
-     
+
   </body>
 </html>
