@@ -170,4 +170,12 @@ class Page
 
   link(:open_window, :text => 'New Window')
 
+  h1(:h1_id, :id => 'h1_id')
+  h1(:h1_class, :class => 'h1_class')
+  h1(:h1_name, :name => 'h1_name')
+  h1(:h1_index, :index => 0)
+  h1(:h1_xpath, :xpath => '//h1')
+  h1(:h1_class_index, :class => 'h1_class', :index => 0)
+  h1(:h1_name_index, :name => 'h1_name', :index => 0)
+
 end
