@@ -500,7 +500,7 @@ module Druid
         return text_area_value_set(identifier.clone, value) unless block_given?
         self.send("#{name}_element").value = value
       end
-      define_method("#{name}") do
+      define_method(name) do
         return text_area_value_for identifier.clone unless block_given?
         self.send("#{name}_element").value
       end
@@ -535,5 +535,33 @@ module Druid
       alias_method "#{name}_unordered_list".to_sym, "#{name}_element".to_sym
     end
 
+    #
+    # adds a method to retrieve the text of a h1 and a h1 element
+    #
+    # @example
+    #   h1(:title, :id => 'title')
+    #   # will generate a 'title' and 'title_element' method
+    #
+    # @param [String] the name used for the generated methods
+    # @param [Hash] identifier how we find a H1.  You can use a multiple paramaters
+    #   by combining of any of the following except xpath.  The valid keys are:
+    #   * :class
+    #   * :id
+    #   * :index
+    #   * :name
+    #   * :xpath
+    # @param optional block to be invoked when element method is called
+    #
+    def h1(name, identifier=nil, &block)
+      define_method(name) do
+        return h1_text_for identifier.clone unless block_given?
+        self.send("#{name}_element").text
+      end
+      define_method("#{name}_element") do
+        return call_block(&block) if block_given?
+        h1_for(identifier.clone)
+      end
+      alias_method "#{name}_h1".to_sym, "#{name}_element".to_sym
+    end
   end
 end
