@@ -18,3 +18,4 @@ require 'druid/elements/list_item.rb'
 require 'druid/elements/text_area.rb'
 require 'druid/elements/form.rb'
 require 'druid/elements/option.rb'
+require 'druid/elements/heading.rb'
