@@ -1,0 +1,7 @@
+module Druid
+  module Elements
+     class Heading < Element
+
+     end
+  end
+end
